--- a/Review/Most common.ipynb
+++ b/Review/Most common.ipynb
@@ -1,40 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "interpreter": {
-      "hash": "fd61235da8d855c081cbd5d7c6398e4c179a40a950675235256f7f30499f1124"
-    },
-    "kernelspec": {
-      "display_name": "Python 3.7.4 64-bit ('base': conda)",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.4"
-    },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "Most common.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Gabe-flomo/Python-Course/blob/main/Projects/Review/Most%20common.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -67,14 +37,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "id": "QWlVFMM0uoN-"
       },
-      "source": [
-        "words = ['apple', 'banana', 'orange', 'apple', 'apple', 'banana', 'berry', 'berry', 'berry', 'berry', 'berry', 'berry', 'orange', 'plum', 'plum', 'orange', 'apple', 'plum', 'orange', 'berry', 'berry', 'banana']"
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[('berry', 8), ('orange', 4), ('plum', 3)]"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "words = ['apple', 'banana', 'orange', 'apple', 'apple', 'banana', 'berry', 'berry', 'berry', 'berry', 'berry', 'berry', 'orange', 'plum', 'plum', 'orange', 'apple', 'plum', 'orange', 'berry', 'berry', 'banana']\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -106,6 +87,43 @@
         "* if the `last_element` variable is equal to the current `pair`\n",
         "    * decrease the `previous_max` by 1"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "name": "Most common.ipynb",
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "fd61235da8d855c081cbd5d7c6398e4c179a40a950675235256f7f30499f1124"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.7.4 64-bit ('base': conda)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.4"
+    },
+    "orig_nbformat": 4
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
