--- a/Review/hills and valleys.ipynb
+++ b/Review/hills and valleys.ipynb
@@ -44,39 +44,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "[2, 3, 4]\n",
-      "2\n",
-      "[3, 4]\n",
-      "3\n",
-      "[4]\n",
-      "4\n",
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = [1,2,3,4]\n",
-    "for i in x.copy():\n",
-    "    index = x.index(i)\n",
-    "    val = x.pop(index)\n",
-    "    print(val)\n",
-    "    print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# set the altitude to 0\n",
+    "# set sea_level flag\n",
+    "# set valley counter \n",
+    "\n",
+    "# loop over path\n",
+    "    # check if the hiker has reached sea level\n",
+    "        # set the sea level flag to true if they have\n",
+    "    \n",
+    "    # if the hiker goes down\n",
+    "\n",
+    "        # subtract 1 from altitude level\n",
+    "\n",
+    "        # check if they're in a valley (altitude is less than 0 and sea_level is true)\n",
+    "            # add one to the valley counter\n",
+    "            # set sea level flag to false\n",
+    "    \n",
+    "    # if the hiker goes up\n",
+    "        # add one to altitude level\n",
+    "        # check if there on a mountain (altitude is greater than 0 and sea_level is true)\n",
+    "            # add one to the mountains counter\n",
+    "            # set sea level to false\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
