--- a/Review/number_guessing_game.ipynb
+++ b/Review/number_guessing_game.ipynb
@@ -48,37 +48,7 @@
     "from random import randint\n",
     "# generate a random number\n",
     "number = randint(1, 100)\n",
-    "# set the attempts counter\n",
-    "\n",
-    "\n",
-    "while attempts_left != 0:\n",
-    "    # get the users guess\n",
-    "    guess = int(input(\"Enter your guess: \"))\n",
-    "    attempts_left -= 1\n",
-    "    print(f\"You guessed {guess}\")\n",
-    "    \n",
-    "    if guess == number:\n",
-    "        print(f\"You won!!! With {attempts_left} remaining moves \")\n",
-    "        break\n",
-    "    elif guess > number:\n",
-    "        # how far off is the guess from the actual number?\n",
-    "        difference = guess - number\n",
-    "        if difference > 20:\n",
-    "            print(\"Guess is too high\")\n",
-    "        elif difference <= 10:\n",
-    "            print(\"Just a little lower\")\n",
-    "        else: print(\"Close, but your guess is high\")\n",
-    "    elif guess < number:\n",
-    "        difference = number - guess\n",
-    "        if difference > 20:\n",
-    "            print(\"Guess is too low\")\n",
-    "        elif difference <= 10:\n",
-    "            print(\"Just a little higher\")\n",
-    "        else:\n",
-    "            print(\"Close, but your guess is low\")\n",
-    "    print()\n",
-    "else:\n",
-    "    print(f\"You lose 😭. The number was {number}\")\n"
+    "# set the attempts counter\n"
    ]
   },
   {
