--- a/Review/file managment.ipynb
+++ b/Review/file managment.ipynb
@@ -1,40 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "interpreter": {
-      "hash": "fd61235da8d855c081cbd5d7c6398e4c179a40a950675235256f7f30499f1124"
-    },
-    "kernelspec": {
-      "display_name": "Python 3.7.4 64-bit ('base': conda)",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.4"
-    },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "file managment.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Gabe-flomo/Python-Course/blob/main/Projects/Review/file%20managment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -58,16 +28,46 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "60gNdH45ua17"
       },
+      "outputs": [],
       "source": [
         "from random import choice\n",
         "files = [f\"file_{i+1}{choice(['.wav', '.doc', '.mp3'])}\" for i in range(50) ]\n",
         "\n"
-      ],
-      "execution_count": 1,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "name": "file managment.ipynb",
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "fd61235da8d855c081cbd5d7c6398e4c179a40a950675235256f7f30499f1124"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.7.4 64-bit ('base': conda)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.4"
+    },
+    "orig_nbformat": 4
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
