--- a/3. Data structures and Methods/3.2 Dictionaries/in_class_demo part2.ipynb
+++ b/3. Data structures and Methods/3.2 Dictionaries/in_class_demo part2.ipynb
@@ -116,8 +116,7 @@
       },
       "outputs": [],
       "source": [
-        "#TODO create a list of programming languages then create a dictionary and  set the default value to 'general_purpose'\n",
-        "\n"
+        "#TODO create a list of programming languages then create a dictionary and  set the default value to 'general_purpose'\n"
       ]
     },
     {
@@ -276,7 +275,7 @@
         "    'twitter': 'microblogging',\n",
         "    'instagram': 'media sharing',\n",
         "    'vsco': 'media sharing'\n",
-        "}"
+        "}\n"
       ]
     },
     {
@@ -532,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -580,7 +579,7 @@
         "The `setdefault()` method returns the value of the item with the specified key.\n",
         "If the key does not exist, insert the key, with the specified value. If the key does exist, the original value will be returned.\n",
         "\n",
-        "***This methog is similar to `.get()` except that this method will actuall create a new `key : value` pair if the key doesn't exist.\n",
+        "***This methog is similar to `.get()` except that this method will actuall create a new `key : value` pair if the key doesn't exist.***\n",
         "\n",
         "```python\n",
         "dict.setdefault(key, value)\n",
