--- a/3. Data structures and Methods/Projects/Adding bank accounts.ipynb
+++ b/3. Data structures and Methods/Projects/Adding bank accounts.ipynb
@@ -93,114 +93,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 1,
       "metadata": {
         "id": "J37LyMoqSG10"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "savings account added successfully\n",
-            "\n",
-            "Current accounts\n",
-            "- checkings 50\n",
-            "- savings 100\n"
-          ]
-        },
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "Interrupted by user",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/var/folders/sb/42h02tv100xgqdxwz9k49_y80000gn/T/ipykernel_13176/718992722.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0maction\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"withdraw\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m             \u001b[0maccount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Which account would you like to withdraw from? \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0maccount\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0maccounts\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"The account {account} doesn't exist. Your aavailable accounts are {list(accounts.keys())}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m~/opt/anaconda3/envs/legacy/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1004\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1005\u001b[0m             )\n\u001b[0;32m-> 1006\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1007\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1008\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m~/opt/anaconda3/envs/legacy/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1049\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1050\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1051\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1052\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1053\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "#TODO\n",
         "accounts = {\n",
-        "    'checkings': 50\n",
-        "}\n",
-        "\n",
-        "while True:\n",
-        "    action = input(\"Which operation would you like to do? (withdraw, deposit, add account, remove account, info) \").lower()\n",
-        "    if action == 'logout':\n",
-        "        break\n",
-        "\n",
-        "    elif action == \"withdraw\":\n",
-        "        while True:\n",
-        "            account = input(\"Which account would you like to withdraw from? \")\n",
-        "            if account not in accounts:\n",
-        "                print(f\"The account {account} doesn't exist. Your aavailable accounts are {list(accounts.keys())}\")\n",
-        "            else:\n",
-        "                amount = int(input(\"How much would you like to withdraw? \"))\n",
-        "                if accounts[account] - amount < 0:\n",
-        "                    print(f\"Your account balance is not enough to withdraw {amount}\")\n",
-        "                else:\n",
-        "                    accounts[account] -= amount\n",
-        "                    print(f\"Your {account} accounts new balance is {accounts[account]}\\n\")\n",
-        "                    break\n",
-        "\n",
-        "    elif action == 'deposit':\n",
-        "        while True:\n",
-        "            account = input(\"Which account would you like to deposit into? \")\n",
-        "            if account not in accounts:\n",
-        "                print(f\"The account {account} doesn't exist. Your aavailable accounts are {list(accounts.keys())}\")\n",
-        "            else:\n",
-        "                amount = int(input(\"How much would you like to deposit? \"))\n",
-        "                accounts[account] += amount\n",
-        "                print(f\"Your {account} accounts new balance is {accounts[account]}\\n\")\n",
-        "                break\n",
-        "\n",
-        "    elif action == 'add account' or action == \"add_account\":\n",
-        "        account = input(\"Enter the name of your new account: \")\n",
-        "        accounts[account] = 0\n",
-        "        amount = int(input(\"How much would you like to deposit? \"))\n",
-        "        accounts[account] += amount\n",
-        "        print(f\"{account} account added successfully\\n\")\n",
-        "\n",
-        "    elif action == 'remove account' or action == \"remove_account\":\n",
-        "        while True:\n",
-        "            account = input(\"Which account would you like to remove? \")\n",
-        "            if account not in accounts:\n",
-        "                print(f\"You do not have an existing account named {account}. Your available accounts are {list(accounts.keys())}\")\n",
-        "            else:\n",
-        "                choice = input(\"Would you like to transfer remaining your remaining balance to a different account? \").lower()\n",
-        "                if choice == 'yes' or choice == 'y':\n",
-        "                    while True:\n",
-        "                        transfer_to = input(\"Which account would you like to transfer to? \")\n",
-        "                        if transfer_to not in accounts:\n",
-        "                            print(f\"You do not have an existing account named {account}. Your available accounts are {list(accounts.keys())}\")\n",
-        "                        else:\n",
-        "                            remaining = accounts[account]\n",
-        "                            accounts[transfer_to] += remaining\n",
-        "                            print(f\"You've successfully transfered {remaining} to your {transfer_to} account! {transfer_to} balance: {accounts[transfer_to]}\")\n",
-        "                            print(f\"Your {account} is being removed...\")\n",
-        "                            del accounts[account]\n",
-        "                            print(f\"Your available accounts are {accounts}\\n\")\n",
-        "                            break\n",
-        "                else:\n",
-        "                    print(f\"Your {account} account is being removed...\")\n",
-        "                    del accounts[account]\n",
-        "                    print(f\"Your available accounts are {accounts}\\n\")\n",
-        "            break\n",
-        "\n",
-        "    elif action == 'info':\n",
-        "        print(\"Current accounts\")\n",
-        "        for key, value in accounts.items():\n",
-        "            print(f\"- {key} {value}\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "    "
+        "    'checking': 50\n",
+        "}"
       ]
     },
     {
