--- a/Review 2/2. weather_analysis.ipynb
+++ b/Review 2/2. weather_analysis.ipynb
@@ -20,7 +20,7 @@
     "import calendar\n",
     "def get_weather_data():\n",
     "    url = \"https://raw.githubusercontent.com/Gabe-flomo/Python-Course/main/Projects/3.%20Data%20structures%20/files/weatherHistory.csv\"\n",
-    "    df = pd.read_csv(url, on_bad_lines='skip')[:5000]\n",
+    "    df = pd.read_csv(url)\n",
     "    df['year'] = df['Formatted Date'].apply(lambda x: pd.to_datetime(x).year)\n",
     "    df['month'] = df['Formatted Date'].apply(lambda x: calendar.month_name[pd.to_datetime(x).month])\n",
     "    return df.to_dict('records')\n",
