--- a/Review 2/4. video_game_analysis.ipynb
+++ b/Review 2/4. video_game_analysis.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "def get_game_data():\n",
     "    url = \"https://raw.githubusercontent.com/Gabe-flomo/Python-Course/main/Projects/3.%20Data%20structures%20/files/Video_Games_Sales_as_at_22_Dec_2016.csv\"\n",
-    "    df = pd.read_csv(url, on_bad_lines='skip')[:3000]\n",
+    "    df = pd.read_csv(url)\n",
     "    return df.to_dict('records')\n",
     "\n",
     "games = get_game_data()\n",
