--- a/3. Data structures and Methods/3.3 Strings/string_tasks.ipynb
+++ b/3. Data structures and Methods/3.3 Strings/string_tasks.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Gabe-flomo/Python-Course/blob/main/Modules/3.%20Data%20structures%20and%20Methods/3.3%20Strings/string_tasks.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -209,7 +209,8 @@
         "        'y': 1,\n",
         "        \"unique characters\": 6\n",
         "    }\n",
-        "]"
+        "]\n",
+        "```"
       ]
     },
     {
@@ -349,6 +350,11 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "name": "string_tasks.ipynb",
+      "provenance": []
+    },
     "interpreter": {
       "hash": "f1a916808f2d29f1a5fbd48aa1cb9129993ca703ecce713879d0cd946e898e32"
     },
@@ -369,12 +375,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.9.7"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "string_tasks.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
